--- a/css/unlock.css
+++ b/css/unlock.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 html,
 body {
     padding: 0;
@@ -5,7 +9,6 @@ body {
 }
 
 body {
-    /*    width: 128px;*/
     height: auto;
 }
 
@@ -29,7 +32,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 4px;
+    padding: 4rem;
     padding: 32rem;
 }
 
@@ -40,11 +43,11 @@ main>* {
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin: 4px 8px;
+    margin: 4rem 8rem;
 }
 
 #main-logo {
-    width: 128rem;
+    width: 64rem;
     /*    user-select: none;*/
 }
 
@@ -63,8 +66,6 @@ passwd>input {
     outline: #888;
     font-size: 16rem;
     display: flex;
-    /*    flex: 1;*/
-    /*    margin: 4px;*/
     height: 48rem;
     margin: 4rem;
     padding: 4rem 12rem;
@@ -73,7 +74,7 @@ passwd>input {
 
 #passwd-title,
 .unlock-title {
-    font-size: 22px;
+    font-size: 22rem;
     font-weight: 500;
     user-select: none;
 }
@@ -103,11 +104,8 @@ notif {
 
 footer {
     font-size: 12rem;
-    /*    position: absolute;
-    bottom: 2rem;*/
     width: 100%;
     margin: 0 auto;
-    /*    margin-top: 12rem;*/
     text-align: right;
     padding: 8rem 32rem;
     box-sizing: border-box;
@@ -127,4 +125,9 @@ footer a:hover {
 
 footer a:hover {
     text-decoration: underline;
+}
+
+.user-first{
+    font-size: 14rem;
+    color: red;
 }
